--- a/server/Pdi.Full.Micro.Service.WebApi/Properties/launchSettings.json
+++ b/server/Pdi.Full.Micro.Service.WebApi/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Pdi.Full.Micro.Service.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/acesso",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
