--- a/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
+++ b/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
@@ -15,4 +15,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.32" />
+    </ItemGroup>
+
 </Project>
