--- a/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
+++ b/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
@@ -9,7 +9,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
