--- a/server/Pdi.Full.Micro.Service.Services/Pdi.Full.Micro.Service.Services.csproj
+++ b/server/Pdi.Full.Micro.Service.Services/Pdi.Full.Micro.Service.Services.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.32" />
+      <PackageReference Include="QuestPDF" Version="2023.5.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.32" />
     </ItemGroup>
