--- a/app/v2/package.json
+++ b/app/v2/package.json
@@ -1,5 +1,6 @@
 {
   "name": "v2",
+  "homepage": "https://weldermarcosxd.github.io/full-micro-service/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
