--- a/app/v2/package.json
+++ b/app/v2/package.json
@@ -40,10 +40,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
+    "msw": "^1.2.2",
     "prettier": "^2.8.8"
   }
 }
