--- a/app/vnext/package.json
+++ b/app/vnext/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
