--- a/app/vnext-ui/package.json
+++ b/app/vnext-ui/package.json
@@ -15,12 +15,15 @@
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
+    "@nextui-org/react": "^2.1.13",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
+    "@nextui-org/table": "^2.0.23",
     "@nextui-org/theme": "2.1.6",
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
+    "@react-stately/data": "^3.10.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
