--- a/app/vnext-ui/package.json
+++ b/app/vnext-ui/package.json
@@ -24,6 +24,7 @@
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
     "@react-stately/data": "^3.10.3",
+    "@types/md5": "^2.3.4",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -33,7 +34,8 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.5.0",
-    "next": "13.4.19",
+    "md5": "^2.3.0",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
