--- a/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
+++ b/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
@@ -16,6 +16,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Bogus" Version="34.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.32" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.32" />
     </ItemGroup>
