--- a/server/Pdi.Full.Micro.Service.WebApi/Properties/launchSettings.json
+++ b/server/Pdi.Full.Micro.Service.WebApi/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "Pdi.Full.Micro.Service.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:5001/swagger/index.html",
-      "applicationUrl": "https://0.0.0.0:5001;http://localhost:5000",
+      "launchUrl": "https://0.0.0.0:8080/swagger/index.html",
+      "applicationUrl": "https://0.0.0.0:8080;http://localhost:0.0.0.0:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
