--- a/server/Pdi.Full.Micro.Service.Entities/Pdi.Full.Micro.Service.Entities.csproj
+++ b/server/Pdi.Full.Micro.Service.Entities/Pdi.Full.Micro.Service.Entities.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+      <PackageReference Include="Riok.Mapperly" Version="3.2.0" />
     </ItemGroup>
 
 </Project>
