--- a/server/Directory.Build.props
+++ b/server/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
+    <DotnetVersion>netcoreapp6.0</DotnetVersion>
   </PropertyGroup>
 </Project>
