--- a/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
+++ b/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+    </PropertyGroup>
+
     <ItemGroup>
       <Folder Include="Controllers\" />
     </ItemGroup>
