--- a/server/Pdi.Full.Micro.Service.Entities/Pdi.Full.Micro.Service.Entities.csproj
+++ b/server/Pdi.Full.Micro.Service.Entities/Pdi.Full.Micro.Service.Entities.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>$(TargetFrameworkLibs)</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkVersion)" />
       <PackageReference Include="Riok.Mapperly" Version="3.2.0" />
     </ItemGroup>
 
