--- a/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
+++ b/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>$(TargetFrameworkLibs)</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,8 +20,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.32" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.32" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="$(EntityFrameworkVersion)" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="$(EntityFrameworkVersion)" />
     </ItemGroup>
 
 </Project>
