--- a/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
+++ b/server/Pdi.Full.Micro.Service.WebApi/Pdi.Full.Micro.Service.WebApi.csproj
@@ -9,17 +9,17 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.32">
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(EntityFrameworkVersion)" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="$(EntityFrameworkVersion)">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.32">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EntityFrameworkVersion)" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="$(EntityFrameworkVersion)">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(EntityFrameworkVersion)" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
