--- a/server/Pdi.Full.Micro.Service.WebApi/appsettings.Development.json
+++ b/server/Pdi.Full.Micro.Service.WebApi/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "JWT_SECRETKEY": "YouShallNotPassTodayAndYouShallNoPrevail"
+  "JWT_SECRETKEY": "YouShallNotPassTodayAndYouShallNoPrevail",
+  "DATABASE_PROVIDER": "Postgres"
 }
