--- a/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
+++ b/server/Pdi.Full.Micro.Service.Repositories/Pdi.Full.Micro.Service.Repositories.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <PackageReference Include="Bogus" Version="34.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-rc.2" />
     </ItemGroup>
 
     <ItemGroup>
