--- a/app/vnext-ui/package.json
+++ b/app/vnext-ui/package.json
@@ -11,20 +11,20 @@
   "dependencies": {
     "@nextui-org/button": "2.0.18",
     "@nextui-org/code": "2.0.16",
-    "@nextui-org/input": "2.1.6",
+    "@nextui-org/input": "2.1.16",
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
-    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/react": "^2.2.9",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/table": "^2.0.23",
-    "@nextui-org/theme": "2.1.6",
-    "@react-aria/ssr": "^3.7.1",
-    "@react-aria/visually-hidden": "^3.8.3",
-    "@react-stately/data": "^3.10.3",
-    "@types/md5": "^2.3.4",
+    "@nextui-org/theme": "2.1.17",
+    "@react-aria/ssr": "^3.9.0",
+    "@react-aria/visually-hidden": "^3.8.7",
+    "@react-stately/data": "^3.11.0",
+    "@types/md5": "^2.3.5",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,16 +32,16 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.2",
-    "intl-messageformat": "^10.5.0",
+    "framer-motion": "^10.16.5",
+    "intl-messageformat": "^10.5.8",
     "md5": "^2.3.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.4",
-    "tailwind-variants": "^0.1.13",
+    "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
   }
