--- a/app/vnext-ui/package.json
+++ b/app/vnext-ui/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/table": "^2.0.23",
+    "@nextui-org/pagination": "2.0.26",
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
