--- a/app/vnext-ui/package.json
+++ b/app/vnext-ui/package.json
@@ -15,12 +15,12 @@
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
+    "@nextui-org/pagination": "2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/table": "^2.0.23",
-    "@nextui-org/pagination": "2.0.26",
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
@@ -35,6 +35,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.5",
     "intl-messageformat": "^10.5.8",
+    "lodash.debounce": "^4.0.8",
     "md5": "^2.3.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
